--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -584,6 +584,9 @@
     </div>
 </div>
 
+<!-- 푸터 (추가) -->
+<footer th:replace="layout/footer :: footer"></footer>
+
 <!-- 스크립트 -->
 <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c1be6dbc09faa31e5316451aad20da0b&libraries=services"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
