아이디, 비밀번호 찾기 추가, 로그인,회원가입 페이지 html수정

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -61,6 +61,7 @@
         /* 입력 필드 스타일 */
         .container input {
             width: 100%;
+            box-sizing: border-box;
             padding: 10px;
             margin-bottom: 15px;
             border: 1px solid #ccc;
@@ -202,8 +203,8 @@
 
     <!-- 링크 버튼 -->
     <div class="links">
-        <a href="#" onclick="alert('아이디 찾기 기능은 아직 구현되지 않았습니다.')">아이디 찾기</a>
-        <a href="#" onclick="alert('비밀번호 찾기 기능은 아직 구현되지 않았습니다.')">비밀번호 찾기</a>
+        <a href="/find-id">아이디 찾기</a>
+        <a href="/find-password">비밀번호 찾기</a>
         <a href="/register">회원가입</a>
     </div>
 
