--- a/src/main/resources/templates/registration_form.html
+++ b/src/main/resources/templates/registration_form.html
@@ -62,6 +62,7 @@
         .container input {
             width: 100%;
             padding: 10px;
+            box-sizing: border-box;
             margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 4px;
