--- a/src/main/resources/templates/friend.html
+++ b/src/main/resources/templates/friend.html
@@ -142,6 +142,18 @@ License: none (public domain)
         padding: 10px;
     }
 
+    .friendship-list {
+        width: 100%;
+        flex: 1;
+        overflow-y: auto;
+        padding: 10px;
+    }
+
+    .friend-request-list {
+            padding: 20px;
+            color: #666;
+    }
+
     .friend-item {
             display: flex;
             align-items: center;
@@ -163,10 +175,7 @@ License: none (public domain)
             color: #666;
     }
 
-    .friend-request-list {
-            padding: 20px;
-            color: #666;
-    }
+
 
   </style>
 </head>
@@ -357,10 +366,6 @@ License: none (public domain)
                               if (!response.ok) {
                                   throw new Error("Failed to fetch data from the server.");
                               }
-                              return response.json();
-                          })
-                          .then(data => {
-                              console.log("Server Response Data:", data);
                           })
                           .catch(error => {
                               console.error("Error fetching users:", error);
@@ -372,10 +377,6 @@ License: none (public domain)
                               if (!response.ok) {
                                   throw new Error("Failed to fetch data from the server.");
                               }
-                              return response.json();
-                          })
-                          .then(data => {
-                              console.log("Server Response Data:", data);
                           })
                           .catch(error => {
                               console.error("Error fetching users:", error);
@@ -394,10 +395,6 @@ License: none (public domain)
                               if (!response.ok) {
                                   throw new Error("Failed to fetch data from the server.");
                               }
-                              return response.json();
-                          })
-                          .then(data => {
-                              console.log("Server Response Data:", data);
                           })
                           .catch(error => {
                               console.error("Error fetching users:", error);
