--- a/src/main/resources/templates/favorites.html
+++ b/src/main/resources/templates/favorites.html
@@ -524,22 +524,9 @@
     <!-- 오른쪽 패널 -->
     <div id="right-panel">
         <div id="right-panel-inner">
-            <!-- 왼쪽 섹션: 검색 창과 서브 네비게이션 바 -->
+            <!-- 왼쪽 섹션서브 네비게이션 바 -->
             <div id="right-panel-left">
-                <!-- 검색 창 -->
-                <div class="search-bar">
-                    <input type="text" id="search-query" placeholder="카페 이름을 검색하세요">
-                    <button id="search-button" class="btn btn-primary btn-block mt-2">검색</button>
-                </div>
 
-                <!-- 서브 네비게이션 바 -->
-                <div class="sub-navbar">
-                    <a href="/info">정보</a>
-                    <a href="/menu">메뉴</a>
-                    <a href="/reviews">리뷰</a>
-                    <a href="/photos">사진</a>
-                    <a href="/reservations">예약</a>
-                </div>
 
                 <!-- 카페 정보 표시 영역 추가 -->
                 <div id="cafe-info">
