--- a/src/main/resources/templates/find-store.html
+++ b/src/main/resources/templates/find-store.html
@@ -245,10 +245,10 @@
                 <select id="rating-filter" class="form-select">
                     <option value="">별점 선택</option>
                     <option value="5">5점</option>
-                    <option value="4">4점 이상</option>
-                    <option value="3">3점 이상</option>
-                    <option value="2">2점 이상</option>
-                    <option value="1">1점 이상</option>
+                    <option value="4">4점대</option>
+                    <option value="3">3점대</option>
+                    <option value="2">2점대</option>
+                    <option value="1">1점대</option>
                 </select>
             </div>
             <button id="filter-button" class="btn btn-primary btn-block mt-2">필터 적용</button>
